[tool.poetry]
name = "yadc"
version = "0.1.0"
description = "Yet Another DVSA Cancellation checker"
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
undetected-chromedriver = "^3.0.3"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
devtools = "^0.8.0"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
