[tool.poetry]
name = "yadc"
version = "0.1.0"
description = "Yet Another DVSA Cancellation checker"
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
pydantic = "^1.8.2"
coloredlogs = "^15.0.1"
halo = "^0.0.31"
fake-useragent = "^0.1.11"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
devtools = "^0.8.0"
ipython = "^7.29.0"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
