[tool.poetry]
name = "yadc"
version = "0.16.3"
description = "Yet Another DVSA Cancellation checker"
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
pydantic = "^1.8.2"
coloredlogs = "^15.0.1"
halo = "^0.0.31"
fake-useragent = "^0.1.11"
psutil = "^5.8.0"
selenium = "^4.0.0"
undetected-chromedriver = "^3.1.3"

[tool.poetry.dev-dependencies]
devtools = "^0.8.0"
ipython = "^7.29.0"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
yadc = "yadc.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = ["yadc/__init__.py:__version__", "pyproject.toml:version"]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"